--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -316,21 +316,6 @@ The `UniqueGroupList`,
 Both `UniqueGroupList` and `UniquePersonList` implements `Iterable` interface.
 // end::uniqueGroupList[]
 
-// tag::addressbook[]
-=== AddressBook feature
-
-==== Current Implementation
-*Enhancements:*
-
-* `versionedAddressBook` now also contains group list, which supports categorisation of persons in MeetingBook.
-* `Group` can be created or removed from the MeetingBook.
-* When a `Group` is removed from the MeetingBook, all members will be removed from this group.
-* When a `Person` is removed from the MeetingBook, all groups containing this person as member will remove this person from the group.
-
-[NOTE]
-The categorisation of `Person` is not exclusive. One `Person` can be enrolled in multiple groups at the same time.
-// end::addressbook[]
-
 // tag::addgroup/deletegroup[]
 === AddGroup and DeleteGroup feature
 The AddGroup and DeleteGroup commands modify the `UniqueGroupList` in the `versionedAddressBook`.
@@ -512,6 +497,25 @@ image::cancelCommandSequenceDiagram.png[width="300"]
 ** Cons: This design causes the command syntax to become unnatural, and makes the program more suspectible to errors.
 // end::meeting[]
 
+// tag::addressbook[]
+=== AddressBook feature
+
+==== Current Implementation
+
+.The object diagram of AddressBook
+image::addressbookObject.png[width="350"]
+
+*Enhancements:*
+
+* `versionedAddressBook` now also contains group list and meeting list, which supports categorisation of persons in MeetingBook.
+* `Group` can be created or removed from the MeetingBook.
+* `Meeting` can be scheduled or cancelled from the MeetingBook.
+* When a `Group` is removed from the MeetingBook, all members will be removed from this group.
+* When a `Person` is removed from the MeetingBook, all groups containing this person as member will remove this person from the group.
+
+[NOTE]
+The categorisation of `Person` is not exclusive. One `Person` can be enrolled in multiple groups at the same time.
+// end::addressbook[]
 
 === Sort and Find feature
 
